Fixed width of image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ footer
 	padding-top: 1vw;
 	padding-right: 2.5vw;
 	padding-bottom: 1vw;
+	max-width: 30vw;
 }
 
 .post-body ul {
